fix: spacing on form field with checkboxes

--- a/src/components/molecules/UiFormField/UiFormField.stories.scss
+++ b/src/components/molecules/UiFormField/UiFormField.stories.scss
@@ -12,7 +12,7 @@
 }
 
 .form-field-with-checkboxes {
-  --form-field-alert-margin: 0;
+  --form-field-alert-margin-block: 0;
 
   &__checkbox {
     margin: 0 0 var(--space-24) 0;
